tempfile/impl-trait-for-tuples/tests/ui/no_const_value.stderr
error: Not supported by full-automatic tuple implementation. Use semi-automatic tuple implementation for more control of the implementation.
 --> tests/ui/no_const_value.rs:3:2
  |
3 |     const Test: u32;
  |     ^^^^^
