tempfile/impl-trait-for-tuples/tests/ui/no_const_value.rs
#[impl_trait_for_tuples::impl_for_tuples(1)]
trait Test {
	const Test: u32;
}

fn main() {}
